# cs288-assignment2

./: .gitignore  pyproject.toml
part1/: tokenizer.py  train_bpe.py
part2/: model.py
part3/: nn_utils.py
part4/: prompting.py  train_baseline.py  trainer.py
part4/fixtures/: squad_dev.json  squad_test.json
