[project]
name = "cs288-sp26-a2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "einops>=0.8.2",
    "numpy>=2.2.6",
    "psutil>=7.2.2",
    "pytest>=9.0.2",
    "regex>=2026.1.15",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
]
